--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,8 @@
 ---
 @charset "utf-8";
 
-
+// import bootstrap
+@import "bootstrap";
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
