--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -179,6 +179,16 @@
     font-size: 20px;
 }
 
+.carousel-control {
+    padding-top: 175px;
+    visibility: hidden;
+}
+
+.carousel:hover .carousel-control { 
+    visibility: visible; 
+}
+
+
 .post-list {
     margin-left: 0;
     list-style: none;
