fixed footer - address spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,15 +8,16 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li><p><a href="mailto:{{ site.email }}">{{ site.email }}</a><p></li>
-          <li><address>Max-Delbrück-Centrum für Molekulare Medizin</address><li>
-          <li><address>Building 89</address><li>
-          <li><address>Robert-Rössle-Str. 10</address></li>
-          <li><address>13125 Berlin</address></li>
+          <li><address>Max-Delbrück-Centrum für Molekulare Medizin<br>
+          Building 89<br>
+          Robert-Rössle-Str. 10<br>
+          13125 Berlin</address></li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
-        <!--DO I WANT SOMETHING HERE??-->
+        <!--DO I WANT SOMETHING HERE?? SOCIAL MEDIA LIST?????????-->
+        <p>Lorem FB/Twitter</p>
       </div>
 
       <div class="footer-col  footer-col-3">
