video collage in index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
 
       <div class="footer-col  footer-col-2">
         <!--DO I WANT SOMETHING HERE?? SOCIAL MEDIA LIST?????????-->
-        <p>Lorem FB/Twitter</p>
+        <p>Lorem Git/FB/Twitter</p>
       </div>
 
       <div class="footer-col  footer-col-3">
