--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,19 +175,34 @@
     padding: $spacing-unit 0;
 }
 
+.collage-cell {
+    border-top: 10px solid $collage-border-color;
+    border-right: 10px solid $collage-border-color;
+    overflow: hidden;
+    padding-left: 0px;
+}
+
+.collage-cell-big {  
+    height: 280px;      
+}  
+  
+.collage-cell-small {  
+    height: 200px;
+    border-bottom: 10px solid $collage-border-color;
+}  
+
+.collage-cell-left {
+    border-left: 10px solid $collage-border-color;
+}
+
+.vid_needs_background {
+    padding-left: 20px !important;
+    background: black;
+}
+
 .page-heading {
     font-size: 20px;
 }
-
-.carousel-control {
-    padding-top: 175px;
-    visibility: hidden;
-}
-
-.carousel:hover .carousel-control { 
-    visibility: visible; 
-}
-
 
 .post-list {
     margin-left: 0;
@@ -207,8 +222,6 @@
     display: block;
     font-size: 24px;
 }
-
-
 
 /**
  * Posts
