--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,8 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$collage-border-color: white;
+
 $on-palm:          600px;
 $on-laptop:        800px;
 
