--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,7 +9,7 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .site-title {
@@ -35,7 +35,7 @@
 
 .main-menu {
     border-top: 3px solid green;
-    padding-top: 15px;
+    padding-top: 10px;
     text-align: left;
 }
 
@@ -202,6 +202,7 @@
 
 .page-heading {
     font-size: 20px;
+    font-weight: bold;
 }
 
 .post-list {
@@ -220,7 +221,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 /**
