--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,3 +268,20 @@
         }
     }
 }
+
+
+/********************************************************/
+/*******************Lab Members**************************/
+
+.member-img {
+
+    width: 200px;
+    height: 200px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    padding: 0;
+}
