fixed footer image to be on all pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 
       <div class="footer-col  footer-col-3">
         <a href="https://www.mdc-berlin.de/bimsb">
-          <img src="assets/BIMSB.png" class="bismb-img" alt="BISMB" style="height:80px;border:0;">
+          <img src="/assets/BIMSB.png" class="bismb-img" alt="BISMB" style="height:80px;border:0;">
         </a>
       </div>
     </div>
