--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,7 @@
 }
 
 .site-title {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    // font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-size: 30px;
     margin-top: 20px;
     /*letter-spacing: -1px;*/
@@ -26,7 +26,7 @@
 }
 
 .expanded-title {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    // font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     color: #666666;
     font-size: 18px;
     padding-top: 65px;
