lab members info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,16 +17,19 @@
 
       <div class="footer-col  footer-col-2">
         <!--DO I WANT SOMETHING HERE?? SOCIAL MEDIA LIST?????????-->
-        <p>Lorem Git/FB/Twitter</p>
+        <!--<p>Lorem Git/FB/Twitter</p>  -->
       </div>
 
       <div class="footer-col  footer-col-3">
-        <a href="https://www.mdc-berlin.de/bimsb">
-          <img src="/assets/BIMSB.png" class="bismb-img" alt="BISMB" style="height:80px;border:0;">
+        <a href="https://www.mdc-berlin.de/bimsb"><img src="http://i.imgur.com/sbFxqwc.png?1" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
         </a>
       </div>
     </div>
+  </div>
 
+  <hr/>
+  <div class="wrapper">
+    <p class="design-cred">Designed by Ella Bahry</p>
   </div>
 
 </footer>
