--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,9 @@
 
     <div class="expanded-title"><p>Microscopy, Image Analysis and Modeling of Developing Organisms</p></div>
 
+  </div>
+  <div class="wrapper">
+
     <div class="main-menu"> 
       <nav class="site-nav">
 
