--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -220,6 +220,25 @@
     background: black;
 }
 
+.video-title {
+  position: absolute;
+  top: 9;
+  bottom: 0;
+  left: 1;
+  right: 0;
+  font-size: 80%; 
+  color: gray;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  visibility: hidden;
+  
+
+}
+
+.hover-play:hover .video-title {
+  visibility: visible;
+  opacity: 1;
+}
+
 .page-heading {
     font-size: 20px;
     font-weight: bold;
