--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -227,7 +227,7 @@
   left: 0;
   right: 0;
   font-size: 80%; 
-  color: gray;
+  color: #00FFFF;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   visibility: hidden;
   
