--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <a href="https://www.mdc-berlin.de/bimsb"><img src="http://i.imgur.com/sbFxqwc.png?1" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
+        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/sbFxqwc.png?1" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
         </a>
       </div>
     </div>
@@ -29,7 +29,7 @@
 
   <hr/>
   <div class="wrapper">
-    <p class="design-cred">Designed by Ella Bahry</p>
+    <p class="design-cred">Designed by <a href="https://github.com/bellonet" target="_blank">@bellonet</a></p>
   </div>
 
 </footer>
