--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
+    <!--<link rel='shortcut icon' type="image/png" href="http://imgur.com/SjvUkTM" />-->
+    <link rel="icon" type="image/x-icon" href="http://example.com/favicon.ico" />
+
+
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
