--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <!--<link rel='shortcut icon' type="image/png" href="http://imgur.com/SjvUkTM" />-->
-    <link rel="icon" type="image/x-icon" href="http://example.com/favicon.ico" />
+	<link rel="shortcut icon" type="image/png" href="http://imgur.com/ckProkJ">
 
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
