nav-menu border color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,7 +34,7 @@
 }
 
 .main-menu {
-    border-top: 3px solid green;
+    border-top: 3px solid #467AE2;
     padding-top: 10px;
     text-align: left;
 }
