--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -191,11 +191,24 @@
     padding: $spacing-unit 0;
 }
 
-
 .carousel-inner {
-    
+    background: black;
 }
 
+.carousel .item {
+  height: 300px;
+}
+
+.carousel-inner > .item > img, 
+.carousel-inner > .item > a > img{
+
+    position: absolute;  
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
+}
 
 .page-heading {
     color: white;
