--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
 
   <hr/>
   <div class="wrapper">
-    <p class="design-cred">Created by <a href="https://github.com/bellonet" target="_blank">bellonet</a></p>
+    <p class="design-cred">Created by <a style="color: #6698FF" href="https://github.com/bellonet" target="_blank">bellonet</a></p>
   </div>
 
 </footer>
