changes to header and images source

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><p><a href="mailto:{{ site.email }}">{{ site.email }}</a><p></li>
-          <li><address>Max-Delbrück-Centrum für Molekulare Medizin<br>
+          <li><a href="mailto:stephan.preibisch@mdc-berlin.de" target="_blank"><img src="/assets/email.png"><a href="https://github.com/PreibischLab" target="_blank"><img src="/assets/github.png" class="github-img" alt="lab-github"></a></li>
+          <li><address class="lab-address">Max-Delbrück-Centrum für Molekulare Medizin<br>
           Building 89<br>
           Robert-Rössle-Str. 10<br>
           13125 Berlin</address></li>
@@ -21,7 +21,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/sbFxqwc.png?1" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
+        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
         </a>
       </div>
     </div>
