--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
     <div class="site-title"><a class="title-link" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
 
-    <div class="expanded-title"><p>Microscopy, Image Analysis and Modeling of Developing Organisms</p></div>
+    <div class="expanded-title"><a class="title-link" href="{{ site.baseurl }}/">Microscopy, Image Analysis and Modeling of Developing Organisms</a></div>
 
   </div>
 
