--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -204,20 +204,6 @@
     overflow-x: hidden;
 }
 
-/**
-.extendfull, .extendleft
-{
-    padding-left: 3000px;
-    margin-left: -3000px;
-}
-
-.extendfull, .extendright
-{
-    padding-right: 3000px;
-    margin-right: -3000px;
-}
-*/
-
 .carousel-inner {
     background: black;
 }
@@ -237,23 +223,24 @@
     margin: auto;
 }
 
-.lab-description-section {
-    padding-top: 5px;
-}
-
 .page-heading {
     font-size: 20px;
     font-weight: bold;
     color: #00589C;
 }
 
-.post-list {
-    margin-left: 0;
-    list-style: none;
+.lab-description-section {
+    padding-top: 5px;
+}
 
-    > li {
-        margin-bottom: $spacing-unit;
-    }
+/******/
+
+
+.inline-block-row .col-xs-4 {
+    vertical-align: top;
+    display: inline-block;
+    float:none;
+    white-space: none;
 }
 
 .post-meta {
@@ -261,14 +248,22 @@
     color: $grey-color;
 }
 
-.post-link {
-    display: block;
-    font-size: 18px;
+.post-header-index {
+    margin-bottom: 5px;
 }
 
-/**
+.post-link {
+    display: block;
+}
+
+.post-excerpt-index {
+    font-size: $small-font-size;
+    margin-bottom: 25px;
+}
+
+/*******************************************
  * Posts
- */
+ ******************************************/
 .post-header {
     margin-bottom: $spacing-unit;
 }
@@ -284,7 +279,7 @@
 }
 
 .post-content {
-    margin-bottom: $spacing-unit;
+    /*margin-bottom: $spacing-unit;*/
 
     h2 {
         font-size: 32px;
