icons from imgur

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><a href="mailto:stephan.preibisch@mdc-berlin.de" target="_blank"><img src="/assets/email.png"><a href="https://github.com/PreibischLab" target="_blank"><img src="/assets/github.png" class="github-img" alt="lab-github"></a></li>
+          <li><a href="mailto:stephan.preibisch@mdc-berlin.de" target="_blank"><img src="http://i.imgur.com/ctzrCqr.png"><a href="https://github.com/PreibischLab" target="_blank"><img src="http://i.imgur.com/5bnQhlR.png" class="github-img" alt="lab-github"></a></li>
           <li><address class="lab-address">Max-Delbrück-Centrum für Molekulare Medizin<br>
           Building 89<br>
           Robert-Rössle-Str. 10<br>
