--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <div class="main-menu"> 
+    <div class="main-menu extendfull extendleft extendright"> 
       <nav class="site-nav">
 
         <div class="trigger">
