added opacity to small members images

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -350,6 +350,12 @@
     margin-left: 20px;
 }
 
+
+img.member-img-small:hover {
+    cursor: pointer;
+    opacity: 0.2;
+}
+
 .member-img {
 
     width: 200px;
