--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ pre {
  */
 .wrapper {
     max-width: -webkit-calc(80% - (#{$spacing-unit} * 2));
-    max-width:         calc(100% - (#{$spacing-unit} * 2));
+    max-width:         calc(80%% - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
