--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,11 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$main-color: #003d6d;
+$main-color-light: #00589C;
+$main-color-dark: #003662;
+
+
 $collage-border-color: white;
 
 $on-palm:          600px;
