--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -349,6 +349,11 @@
 
 .sticky-members {
     background: white;
+
+    @include media-query($on-laptop) {
+        visibility: hidden !important;
+        display: none !important;
+    }
 }
 
 .sticky {
@@ -356,6 +361,7 @@
   top: 0;
   z-index: 100;
   border-top: 0;
+
 }
 
 .member-img-small {
@@ -363,6 +369,9 @@
     margin-top: 10px;
     margin-bottom: -200px;
     padding-bottom: -200px;
+
+
+
 }
 
 .member-img-small p {
