links to members from all pages

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -433,6 +433,10 @@ body {
     position: relative;
     top: -300px;
     visibility: hidden;
+
+    @include media-query($on-laptop) {
+        top: 0px;
+    }
 }
 
 .member-img {
