links to members from all pages

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,9 +22,9 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-$main-color: #003d6d;
-$main-color-light: #00589C;
-$main-color-dark: #003662;
+$main-color: #4f0000;
+$main-color-light: #660000;
+$main-color-dark: #440000;
 
 
 $collage-border-color: white;
