--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,11 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$main-color: #4f0000;
+$main-color-light: #660000;
+$main-color-dark: #440000;
+
+
 $collage-border-color: white;
 
 $on-palm:          600px;
