fixed updates layouts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -299,7 +299,7 @@ body {
     background: #f6f6f6;
 }
 
-.inline-block-row .col-xs-4 {
+.inline-block-row .col-md-4,.col-sm-6 {
     vertical-align: top;
     display: inline-block;
     float:none;
