added bimsb seminar

--- a/_includes/header_extras.html
+++ b/_includes/header_extras.html
@@ -24,9 +24,7 @@
 
   <div class="wrapper">
 
-    <div class="site-title"><a class="title-link" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
-
-    <div class="expanded-title"><a class="title-link" href="{{ site.baseurl }}/">Microscopy, Image Analysis and Modeling of Developing Organisms</a></div>
+    <div class="site-title-4-extra"><a class="title-link" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
 
   </div>
 
