fixed base url for extras

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
             {% endif %}
           {% endfor %}
-          <a class="page-link bimsb-link" href="/bimsb_seminar/">BIMSB Seminar</a>
+          <a class="page-link bimsb-link" href="{{ site.baseurl }}/bimsb_seminar/">BIMSB Seminar</a>
         </div>
       </nav>
     </div>
