--- a/_includes/header_extras.html
+++ b/_includes/header_extras.html
@@ -1,8 +1,8 @@
-<header class="site-header">
+<header class="site-header site-header-bimsb">
 
   <div class="wrapper">
 
-    <div class="main-menu extendfull extendleft extendright"> 
+    <div class="main-menu extendfull extendleft extendright main-menu-bimsb"> 
       <nav class="site-nav">
 
         <a href="#" class="menu-icon">
