--- a/_includes/footer_extras.html
+++ b/_includes/footer_extras.html
@@ -2,12 +2,9 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><a href="mailto:stephan.preibisch@mdc-berlin.de" target="_blank"><img src="http://i.imgur.com/ctzrCqr.png"><a href="https://github.com/PreibischLab" target="_blank"><img src="http://i.imgur.com/5bnQhlR.png" class="github-img" alt="lab-github"></a></li>
           <li><address class="lab-address">Max-Delbrück-Centrum für Molekulare Medizin<br>
           Building 89<br>
           Robert-Rössle-Str. 10<br>
@@ -21,7 +18,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
+        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img bimsb-img-bimsb-footer" alt="BIMSB"/></a>
         </a>
       </div>
     </div>
