added microscopy club

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -106,7 +106,7 @@ body {
         color: #FFFFFF;
         line-height: $base-line-height;
         margin-right: 10px;
-        margin-left: 30px;
+        margin-left: 10px;
     }
 
     .home-from-bimsb-page {
@@ -514,7 +514,14 @@ body {
 }
 
 /********************************************************/
-/***********************Jobs*****************************/
+/******************MICROSCOPY CLUB***********************/
+
+.micro-club-description {
+    margin-bottom: 10px;
+}
+
+/********************************************************/
+/***********************BIMSB****************************/
 
 .bimsb-seminar {
     font-size: 15px;
