--- a/_includes/header_extras.html
+++ b/_includes/header_extras.html
@@ -13,7 +13,7 @@
 
   <div class="wrapper">
 
-    <div class="site-title-4-extra"><a class="title-link" href="{{ site.baseurl }}/bimsb_seminar/">BIMSB Seminar Series 2017</a></div>
+    <div class="site-title-4-extra"><a class="title-link" href="{{ site.baseurl }}/bimsb_seminar/">BIMSB Seminar Series</a></div>
 
   </div>
 
