--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,15 +21,18 @@
       </div>
 
       <div class="footer-col  footer-col-3">
+
         <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img" alt="BIMSB"/></a>
-        </a>
       </div>
     </div>
   </div>
 
   <hr/>
-  <div class="wrapper">
-    <p class="design-cred">Created by <a style="color: #6698FF" href="https://github.com/bellonet" target="_blank">bellonet</a></p>
+  <div class="wrapper disclaimer">
+    <a href="https://www.mdc-berlin.de/bimsb" target="_blank">Imprint / Impressum</a>
+    <a href="https://www.mdc-berlin.de/bimsb" target="_blank">Data Privacy</a>
+
+    <p class="design-cred">Created by <a href="https://github.com/bellonet" target="_blank">bellonet</a></p>
   </div>
 
 </footer>
