content in data privacy and imprint

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,8 +29,8 @@
 
   <hr/>
   <div class="wrapper disclaimer">
-    <a href="https://www.mdc-berlin.de/bimsb" target="_blank">Imprint / Impressum</a>
-    <a href="https://www.mdc-berlin.de/bimsb" target="_blank">Data Privacy</a>
+    <a href="{{ site.baseurl }}/imprint" target="_blank">Imprint / Impressum</a>
+    <a href="{{ site.baseurl }}/data_privacy" target="_blank">Data Privacy</a>
 
     <p class="design-cred">Created by <a href="https://github.com/bellonet" target="_blank">bellonet</a></p>
   </div>
