--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -331,8 +331,6 @@ body {
     padding-top: 5px;
 }
 
-/******/
-
 .extendfull, .extendleft
 {
     padding-left: 20%;
@@ -355,6 +353,32 @@ body {
     }
 }
 
+/***
+@-moz-document url-prefix() {
+    
+    .extendfull, .extendleft
+    {
+        padding-left: 20%;
+        margin-left: -20%;
+        border-radius: 5px;
+
+        @include media-query($on-laptop) {
+            padding-left: 1%;
+            margin-left: -1%;
+        }
+    }
+
+    .extendfull, .extendright
+    {
+        margin-right: -3%;
+
+        @include media-query($on-laptop) {
+            padding-right: 1%;
+            margin-right: -1%;
+        }
+    }
+}  
+***/
 
 .lab-updates {
     background: #f6f6f6;
