width, mozilla and big screen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <div class="main-menu extendfull extendleft extendright"> 
+    <div class="main-menu full-width"> 
       <nav class="site-nav">
 
         <a href="#" class="menu-icon">
