--- a/_includes/footer_extras.html
+++ b/_includes/footer_extras.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img bimsb-img-bimsb-footer" alt="BIMSB"/></a>
+        <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="https://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img bimsb-img-bimsb-footer" alt="BIMSB"/></a>
         </a>
       </div>
     </div>
