--- a/_includes/header_extras.html
+++ b/_includes/header_extras.html
@@ -4,7 +4,7 @@
 
     <div class="main-menu extendfull extendleft extendright main-menu-bimsb"> 
       <nav class="site-nav">
-            <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="http://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img-header" alt="BIMSB"/></a>
+            <a href="https://www.mdc-berlin.de/bimsb" target="_blank"><img src="https://i.imgur.com/c5sstzV.png" title="source: imgur.com" class="bimsb-img-header" alt="BIMSB"/></a>
 
             <a class="page-link home-from-bimsb-page pull-right" href="{{ site.baseurl }}/"><small>Back to the Preibisch Lab website</small></a>
       </nav>
